Rendering simple geometry corrupts with greasepencil layer #62279

Closed
opened 2019-03-06 19:45:44 +01:00 by Tom Nelson · 18 comments

Windows 10
Radeon Vega 64

Broken: 2.80, 59f30e9390
Worked: 2.80, ae977d13f8

Rendering simple primitive geometry corrupts with greasepencil layer

Create simple building geometry for background, create greasepencil animation in front of geometry. animate camera move to follow GP animation.
Render output animation renders first couple of frames correctly then geometry flashes to white (no shader?). GP object renders correctly.

bad_render.gif

If I remove the GP object the geometry renders correctly.

geometry_render.gif

If I use 'Viewport render animation' (while still in camera view) GP object and geometry render correctly.

good_render.gif

flight.blend

Windows 10 Radeon Vega 64 Broken: 2.80, 59f30e9390d4 Worked: 2.80, ae977d13f8e9 Rendering simple primitive geometry corrupts with greasepencil layer Create simple building geometry for background, create greasepencil animation in front of geometry. animate camera move to follow GP animation. Render output animation renders first couple of frames correctly then geometry flashes to white (no shader?). GP object renders correctly. ![bad_render.gif](https://archive.blender.org/developer/F6774283/bad_render.gif) If I remove the GP object the geometry renders correctly. ![geometry_render.gif](https://archive.blender.org/developer/F6774285/geometry_render.gif) If I use 'Viewport render animation' (while still in camera view) GP object and geometry render correctly. ![good_render.gif](https://archive.blender.org/developer/F6774290/good_render.gif) [flight.blend](https://archive.blender.org/developer/F6774253/flight.blend)
Author

Added subscriber: @tomnel

Added subscriber: @tomnel

Added subscriber: @antoniov

Added subscriber: @antoniov

I cannot reproduce on Windows 10 RTX2080TI

flight-001d-0001-0109.mp4

I cannot reproduce on Windows 10 RTX2080TI [flight-001d-0001-0109.mp4](https://archive.blender.org/developer/F6778278/flight-001d-0001-0109.mp4)
Author

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Tom Nelson self-assigned this 2019-03-07 09:13:47 +01:00
Author

Must be an OpenCL thing or something with my system. Strange because an older build works fine.
Thanks for looking!

Must be an OpenCL thing or something with my system. Strange because an older build works fine. Thanks for looking!
Author

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Author

Maybe this is something for Jeroen Bakker (jbakker) to look at as this is still happening in current builds. but oddly not the current buildbot.

Now it just goes black

flight-008d-.mp4

Maybe this is something for Jeroen Bakker (jbakker) to look at as this is still happening in current builds. but oddly not the current buildbot. Now it just goes black [flight-008d-.mp4](https://archive.blender.org/developer/F6793079/flight-008d-.mp4)
Author

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

Added subscribers: @fclem, @ZedDB

Added subscribers: @fclem, @ZedDB
Tom Nelson was unassigned by Sebastian Parborg 2019-03-11 11:24:29 +01:00
Clément Foucault was assigned by Sebastian Parborg 2019-03-11 11:24:29 +01:00

I can confirm this on my 290x (Linux, mesa git drivers). Only the first frame has the correct shading, in the rest the background objects are white.
I do not have OpenCL so this is not OpenCL related.

@fclem can you reproduce this?

I can confirm this on my 290x (Linux, mesa git drivers). Only the first frame has the correct shading, in the rest the background objects are white. I do not have OpenCL so this is not OpenCL related. @fclem can you reproduce this?

I cannot reproduce it either. I'm not sure about what could cause this.

Can you try to reproduce from scratch?

I cannot reproduce it either. I'm not sure about what could cause this. Can you try to reproduce from scratch?
Author

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Author

I will try to do another scene soon, meanwhile I will close this as the latest builds are no longer doing this. If it pops up again I will reopen.

Thanks!

I will try to do another scene soon, meanwhile I will close this as the latest builds are no longer doing this. If it pops up again I will reopen. Thanks!

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

I can still reproduce this on my end with the latest blender git version.

@fclem I bisected and found the commit that broke it for me:
798d2cadc3

Is there anything that you want me to do as you can't seem to reproduce this yourself?

I can still reproduce this on my end with the latest blender git version. @fclem I bisected and found the commit that broke it for me: 798d2cadc3 Is there anything that you want me to do as you can't seem to reproduce this yourself?

Ok I can reproduce (I misread the repro steps) I'll take a look at it tomorrow.

Ok I can reproduce (I misread the repro steps) I'll take a look at it tomorrow.

This issue was referenced by e28f0f179d

This issue was referenced by e28f0f179d2a4c5f547c8fce6f010e7b733d6887

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62279
No description provided.